GG-74 validate lookupKey is not used on references (#347)